fixes drop-down z-index

--- a/src/components/form_components/accountDropdown/accountDropdown.scss
+++ b/src/components/form_components/accountDropdown/accountDropdown.scss
@@ -57,9 +57,12 @@
       box-shadow: 0 0 0 0 rgba(25, 74, 179, 0.5);
     }
   }
-  .button_align {
-    margin-top: 25px;
-  }
-  .speed {
-    animation-duration: .25s;
-  }
+
+.button_align {
+  margin-top: 25px;
+}
+
+.animation {
+  animation-duration: .25s;
+  z-index: 5000;
+}
